<resources>
    <string name="app_name">Claci</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">x</string>
    <string name="div">/</string>
    <string name="dec">.</string>
    <string name="equal">=</string>
    <string name="para">()</string>
    <string name="clr">C</string>
    <string name="sig">+/-</string>
    <string name="per">%</string>
    <string name="txt"> </string>
    <string name="del">del</string>
    <string name="deleteDescription">Delete Icon</string>
</resources>