<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonGrid"
            android:rowCount="5"
            android:columnCount="4">

            <Button
                android:id="@+id/clearTextView"
                android:text="@string/clr"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="0"
                android:layout_column="0"/>

            <Button
                android:id="@+id/parathesis"
                android:text="@string/para"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="0"
                android:layout_column="1"/>

            <Button
                android:id="@+id/percentage"
                android:text="@string/per"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="0"
                android:layout_column="2"/>

            <Button
                android:id="@+id/divison"
                android:text="@string/div"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="0"
                android:layout_column="3"/>

            <Button
                android:id="@+id/number7"
                android:text="@string/num7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="1"
                android:layout_column="0"/>

            <Button
                android:id="@+id/number8"
                android:text="@string/num8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="1"
                android:layout_column="1"/>

            <Button
                android:id="@+id/number9"
                android:text="@string/num9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="1"
                android:layout_column="2"/>

            <Button
                android:id="@+id/multiplication"
                android:text="@string/mul"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="1"
                android:layout_column="3"/>

            <Button
                android:id="@+id/number4"
                android:text="@string/num4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="2"
                android:layout_column="0"/>

            <Button
                android:id="@+id/number5"
                android:text="@string/num5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="2"
                android:layout_column="1"/>

            <Button
                android:id="@+id/number6"
                android:text="@string/num6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="2"
                android:layout_column="2"/>

            <Button
                android:id="@+id/subtraction"
                android:text="@string/sub"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="2"
                android:layout_column="3"/>

            <Button
                android:id="@+id/number1"
                android:text="@string/num1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="3"
                android:layout_column="0"/>


            <Button
                android:id="@+id/number2"
                android:text="@string/num2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="3"
                android:layout_column="1"/>

            <Button
                android:id="@+id/number3"
                android:text="@string/num3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="3"
                android:layout_column="2"/>

            <Button
                android:id="@+id/addition"
                android:text="@string/add"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="3"
                android:layout_column="3"/>

            <Button
                android:id="@+id/sign"
                android:text="@string/sig"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="4"
                android:layout_column="0"/>

            <Button
                android:id="@+id/number0"
                android:text="@string/num0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="4"
                android:layout_column="1"/>

            <Button
                android:id="@+id/decimal"
                android:text="@string/dec"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="4"
                android:layout_column="2"/>

            <Button
                android:id="@+id/equalto"
                android:text="@string/equal"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_row="4"
                android:layout_column="3"/>

        </GridLayout>

</RelativeLayout>